# datgrunch2

./: Cargo.nix  README.md  flake.nix
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: dm.rs  gm.rs  lib.rs  listings.rs  sign.rs
core/tests/: basic.rs
