[package]
name = "dg2core"
version = "0.1.0"
authors = ["zseri <zseri.devel@ytrizja.de>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
base64 = "0.13"
chrono = "0.4"
rayon = "1.5"
sodiumoxide = "0.2"
serde_cbor = "0.11"
walkdir = "2.3"
zstd = "0.7"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
